logs/mobility/build.make.060.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void doPickupControllerMovements()’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:403:51: error: too few arguments to function ‘geometry_msgs::Pose2D stevenSearch(bool)’
 geometry_msgs::Pose2D tempLocation = stevenSearch();
                                                   ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:56:23: note: declared here
 geometry_msgs::Pose2D stevenSearch(bool);
                       ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void doHitTheBaseCode()’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:1018:10: error: no match for call to ‘(std::stringstream {aka std::basic_stringstream<char>}) ()’
 print(ss());
          ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
